# uu-parsinglib

./: README  uu-parsinglib.cabal
Text.ParserCombinators.UU/Text/ParserCombinators/UU/: Core.hs
src-lcheck/Text/ParserCombinators/UU/: BasicInstances.hs  CHANGELOG.hs  Core.hs  Derived.hs  Examples.hs  Parsing.hs  Perms.hs  README.hs
src-lcheck/Text/ParserCombinators/UU/FutureWork/: BasicInstances-Ext.hs  BasicInstances2.hs  PermsMerge2.hs
src-with-haddock/Text/ParserCombinators/: UU.hs
src-with-haddock/Text/ParserCombinators/UU/: MergeAndPermute.hs  Utils.hs
src-with-haddock/Text/ParserCombinators/UU/Demo/: Examples.hs  MergeAndPermute.hs
src/Data/: BreadthFirstSearch.hs
src/Language/BibTex/: UU.hs
src/Text/ParserCombinators/: UU.hs
src/Text/ParserCombinators/UU/: BasicInstances.hs  CHANGELOG.hs  Core.hs  Derived.hs  Examples.hs  Idioms.hs  Interface.hs  Merge.hs  MergeAndPermute.hs  MergingParsers.hs  Parsing.hs  Perms.hs  README.hs  Utils.hs
src/Text/ParserCombinators/UU/BasicInstances/: ByteString.hs  List.hs  String.hs  Text.hs
src/Text/ParserCombinators/UU/BasicInstances/ByteString/: Lazy.hs
src/Text/ParserCombinators/UU/Demo/: Examples.hs  MergeAndPermute.hs
src/Text/ParserCombinators/UU/Demos/: DemoMerge.hs
src/Text/ParserCombinators/UU/FutureWork/: Core2.hs
tests/: Andres.hs  Andres2.hs
