Name:                uu-parsinglib
Version:             2.7.0
Build-Type:          Simple
License:             MIT
Copyright:           S Doaitse Swierstra 
License-file:        LICENSE
Author:              Doaitse Swierstra, Utrecht University
Maintainer:          Doaitse Swierstra      
Stability:           stable, but evolving
Homepage:            http://www.cs.uu.nl/wiki/bin/view/HUT/ParserCombinators
Bug-reports:         mailto:doaitse@swierstra.net      
Synopsis:            Online, error-correcting parser combinators; monadic and applicative interfaces       
Cabal-Version:       >=1.4
Description:         New version of the Utrecht University parser combinator library, which  provides online, error correction, 
                     annotation free, applicative style parser combinators. In addition to this we do  provide a monadic interface.
                     Parsers do analyse themselves to avoid commonly made errors. A recent addition was the combinator @`pMerge`@ and 
                     associates which generalises merging and permuting parsers.
                     .
                     The modules "Text.ParserCombinators.UU.Demo.Examples" and "Text.ParserCombinators.UU.Demo.MergeAndpermute" contain a ready-made 
                     @show_examples@  function,
                     which can be called to see e.g. the error correction at work. It contains haddock documentation too; 
                     try all the small tests for yourself to see the correction process at work, and to get a 
                     feeling for how to use the various combinators. 
                     .
                     The file "Text.ParserCombinators.UU.CHANGELOG" contains a log of the most recent changes and additions
                     .
                     The file "Text.ParserCombinators.UU.README" contains some references to background information
                     .
                     We maintain a low frequency mailing for discussing the package. You can subscribe at:  <https://mail.cs.uu.nl/mailman/listinfo/parsing>
Category:            Parsing Text

Library
  hs-source-dirs:    src

  Build-Depends:     base >= 4.2 && <5, ListLike >= 3.0.1

  Exposed-modules:   Text.ParserCombinators.UU
                     Text.ParserCombinators.UU.CHANGELOG
                     Text.ParserCombinators.UU.README
                     Text.ParserCombinators.UU.Core
                     Text.ParserCombinators.UU.BasicInstances
                     Text.ParserCombinators.UU.Derived
                     Text.ParserCombinators.UU.MergeAndPermute
                     Text.ParserCombinators.UU.Utils
                     Text.ParserCombinators.UU.Demo.Examples
                     Text.ParserCombinators.UU.Demo.MergeAndPermute
